Fix overflow issue in autocomplete list, cleanup whitespace

--- a/client/stylus/app.inbox.styl
+++ b/client/stylus/app.inbox.styl
@@ -2,7 +2,7 @@
 @import "./client/stylus/appfn"
 
 @css {
-/*  
+/*
 INBOX stylesheet
 app.inbox.styl
 */
@@ -21,8 +21,8 @@ app.inbox.styl
 
   > .panel-1
     overflow              visible
-                          
-.new-message-bar          
+
+.new-message-bar
   padding                 4px
   height                  35px
   border-bottom           1px solid #ddd
@@ -47,7 +47,7 @@ app.inbox.styl
       sprite()
       &.delete
         bg              position,-120px -420px
-      &.mark-unread     
+      &.mark-unread
         bg              position,-140px -480px
 
 .inbox-tabview,
@@ -63,7 +63,7 @@ app.inbox.styl
     // overflow-y       scroll
     bg(color,rgba(249,249,249,1))
 
-.message-list 
+.message-list
   border-right     1px solid #e8e8e8
   border-left      1px solid #e8e8e8
 
@@ -113,7 +113,7 @@ app.inbox.styl
     padding                   15px 30px 17px 30px
     width                     auto
     borderBox()
-    
+
     textarea
       width                   100%
 
@@ -137,8 +137,8 @@ app.inbox.styl
   &.no-comment
     .reply-to-thread-box
       border-top-width        0
-  
-  
+
+
 
 ul.inbox-list
   margin                  0
@@ -158,7 +158,7 @@ ul.inbox-list
       padding             7px 11px 7px 8px
     &:last-child
       border-bottom       1px solid #e0e0df !important
-    div.avatar-wrapper    
+    div.avatar-wrapper
       padding             1px
       border              1px solid #e3e3e3
       margin-right        11px
@@ -172,7 +172,7 @@ ul.inbox-list
         a.profile
           color           linkColor1
           font-weight     600
-      footer              
+      footer
         margin-top        2px
         font-size         11px
         color             #888
@@ -208,6 +208,8 @@ ul.inbox-list
   .ttag
     margin-right    0
     vertical-align  middle
+    text-overflow   ellipsis
+    overflow        hidden
 
 .compose-message-modal
 
